Memory Leak: Render Animation Sequence #107714

Closed
opened 2023-05-07 22:26:08 +02:00 by Russell-L-Tracy-Jr · 8 comments
First-time contributor

System Information Mac Studio Max, 64 GB Ram
Operating system: Mac OS Ventura 13.3.1
Graphics card: Metal 32 core GPU

Blender Version
Broken: 3.5.1.
Worked: N/A

Short description of error
When attempting to render out 100 frame sequence to Tiffs... after 25 to 30 renders @2K using Cycles GPU only (Metal) the Ram usage is through the roof and Blender crashes. It appears that it doesn't flush the RAM between each render... by frame 25 Blender is using all the system RAM and has a swap file of over 100GB. The scene contains a single simple character sculpt with 4 fur curve nodes applied. Average render time when applied to single frame at .1 sampling is about 25 seconds.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Mac Studio Max, 64 GB Ram Operating system: Mac OS Ventura 13.3.1 Graphics card: Metal 32 core GPU **Blender Version** Broken: 3.5.1. Worked: N/A **Short description of error** When attempting to render out 100 frame sequence to Tiffs... after 25 to 30 renders @2K using Cycles GPU only (Metal) the Ram usage is through the roof and Blender crashes. It appears that it doesn't flush the RAM between each render... by frame 25 Blender is using all the system RAM and has a swap file of over 100GB. The scene contains a single simple character sculpt with 4 fur curve nodes applied. Average render time when applied to single frame at .1 sampling is about 25 seconds. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Russell-L-Tracy-Jr added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-07 22:26:09 +02:00
Member

Hi, thanks for the report. Please share .blend file in which the issue is happening.

Hi, thanks for the report. Please share .blend file in which the issue is happening.
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-05-08 03:04:56 +02:00
First-time contributor

Hi, I believe this should now be fixed by (#108083) in Blender 3.6 Beta.

Could you please verify if you are still experiencing the issue in the latest 3.6 daily? https://builder.blender.org/download/daily/
Thanks!

Hi, I believe this should now be fixed by (https://projects.blender.org/blender/blender/pulls/108083) in Blender 3.6 Beta. Could you please verify if you are still experiencing the issue in the latest 3.6 daily? https://builder.blender.org/download/daily/ Thanks!
Author
First-time contributor

Hello @Michael-Parkin-White-Apple , I am still experiencing the same issue after updating to Blender Beta 3.6. It makes it to frame 30 and then crashes due to insufficient memory. Please find the blend file attached. Thanks

Hello @Michael-Parkin-White-Apple , I am still experiencing the same issue after updating to Blender Beta 3.6. It makes it to frame 30 and then crashes due to insufficient memory. Please find the blend file attached. Thanks
Philipp Oeser added the
Interest
Metal
Platform
macOS
labels 2023-06-09 10:53:09 +02:00
Pratik Borhade added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2023-06-09 11:05:20 +02:00
Iliya Katueshenock changed title from Memory Leak - Render Animation Sequence Mac OS Ventura - Mac Studio Max to Memory Leak: Render Animation Sequence 2023-06-25 01:35:37 +02:00
Author
First-time contributor

Hi Blender Team,

I am still experiencing the same issue in the full release of Blender 3.6. The memory leak consistently crashes the system at frame 31 of the animation render. Please find the file experiencing the issue attached.

Hi Blender Team, I am still experiencing the same issue in the full release of Blender 3.6. The memory leak consistently crashes the system at frame 31 of the animation render. Please find the file experiencing the issue attached.
Michael Jones (Apple) self-assigned this 2023-07-14 13:59:07 +02:00

Thanks for the update and .blend file @Russell-L-Tracy-Jr - this gives us some useful clues to help track it down.

Thanks for the update and .blend file @Russell-L-Tracy-Jr - this gives us some useful clues to help track it down.
Author
First-time contributor

@Michael-Jones Absolutely... and Thank You! I've noticed this morning that with release 3.6 the same issue is happening when rendering one off images... the memory isn't getting released. This wasn't the case in 3.5. I rendered that file maybe 9 times over the course of an hour and it crashed the system due to running out of memory.

@Michael-Jones Absolutely... and Thank You! I've noticed this morning that with release 3.6 the same issue is happening when rendering one off images... the memory isn't getting released. This wasn't the case in 3.5. I rendered that file maybe 9 times over the course of an hour and it crashed the system due to running out of memory.
First-time contributor

I have just run upon this thread after googling because I'm having the same issue on a MacBook Air 8GB running Ventura 13.5.2, and I discovered that, in my case, the issue is no longer present in Blender 4.0 Alpha. I'm rendering a 300 frame animation and on Blender 3.6 RAM usage would spike from 1.5GB to 6GB after two frames, and then I'd get a "out of GPU memory" error, while in 4.0 Alpha, after, at the moment, 25 frames rendered, RAM usage is constantly in the 1.60-1.63GB range.

I have just run upon this thread after googling because I'm having the same issue on a MacBook Air 8GB running Ventura 13.5.2, and I discovered that, in my case, the issue is no longer present in Blender 4.0 Alpha. I'm rendering a 300 frame animation and on Blender 3.6 RAM usage would spike from 1.5GB to 6GB after two frames, and then I'd get a "out of GPU memory" error, while in 4.0 Alpha, after, at the moment, 25 frames rendered, RAM usage is constantly in the 1.60-1.63GB range.
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-09-25 14:57:31 +02:00
Author
First-time contributor

Thanks to all who provided support! I can confirm that with 4.0 Alpha the issue has been resolved. I am able to render the the 100 frame sequence on two separate Apple Silicon machines without fail.

Thanks to all who provided support! I can confirm that with 4.0 Alpha the issue has been resolved. I am able to render the the 100 frame sequence on two separate Apple Silicon machines without fail.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107714
No description provided.